# owl

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  install.sh  link-desks.sh  link-scripts.sh  link.sh  owl-start.sh  secrets.example.sh
.cursor/rules/: 00-project-overview.mdc  10-rust-validate-pattern.mdc  20-setup-json-schema.mdc  30-shell-practices.mdc  owl-10-rust-validate-pattern.mdc  owl-20-setup-json-schema.mdc  owl-30-shell-practices.mdc  owl-overview.mdc
.github/workflows/: rust.yml
arch/: .profile  .shenv  .zshrc
arch/scripts/: arch-setup.sh
arch/setup/: tesseract-desk.sh
common/config/: .Xresources  .alias  .alias-git  .bashrc  .profile  .shenv  .vimrc  .xinitrc  .xprofile  .zshenv  .zshrc  compton.conf  config.fish  dunstrc  gitconfig  i3-config  i3-status  i3blocks-config  npmrc  picom.conf  rc.conf  rofi.config  ssh-config  starship.toml  terminator.config  user-dirs.dirs  vscode.vimrc
common/desks/: framework.sh  home-desk.sh  home-monitor.sh  just-monitor.sh  laptop.sh  redwood-desk.sh
common/i3-status-scripts/: battery  keystate  network  weather
common/menu-scripts/: cliphist.sh  emoji.sh  run-script.sh
common/rc/: base-aliases.sh  bun.sh  fzf.sh  systemctl-aliases.sh
home-pi/: .bashrc  .nginx.conf.swp  .profile  nginx.conf  pm2-ecosystem.config.js  setup.sh  shenv  start-eco.sh  vimrc
links/: .main-pi.sh.swp  arch.json  home-pi.json  mac.json  main-pi.sh  main-ubuntu.sh
mac/: mac.targets
setups/: basic.sh  greenclip.sh  owl-dev.sh  owl.sh
src/: main.rs
ubuntu/: Ubuntu.targets
ubuntu-thinkpad/: Ubuntu.targets
(+268 files in other folders)
