[package]
name = "owl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "owl"
path = "src/main.rs"

[[bin]]
name = "omni-menu"
path = "src/omni_menu/main.rs"

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
colored = "2.0.4"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
shellexpand = "3.1.0"
thiserror = "1.0"
once_cell = "1.19"
gtk = { version = "0.10.2", package = "gtk4" }
fuzzy-matcher = "0.3"
dirs = "5.0"
regex = "1.5"
